endpoint editar trraije y modifico endpoint para grabar triaje
